corpus/children.txt
================
Single child
================
foo { child1 }

----------------
(document
	(node
		(identifier)
		(node
			(identifier))))

================
Empty children
================
foo {
	child1; child2
	child3
}

bar { child }

----------------
(document
	(node
		(identifier)
		(node
			(identifier))
		(node
			(identifier))
		(node
			(identifier)))
	(node
		(identifier)
		(node
			(identifier))))
