corpus/comments.txt
================
Only comment
================
// a comment

----------------
(document
	(single_line_comment))

================
Foo
================
foo // a node terminate by a comment

----------------
(document
	(node
		(identifier)
		(single_line_comment)))

================
Single-line comments
================
// a comment
foo // a node terminated by a comment
bar \ // a comment following a line termination
    5.0
// a trailing comment
another_node

----------------
(document
	(single_line_comment)
	(node
		(identifier)
		(single_line_comment))
	(node
		(identifier)
		(single_line_comment)
		(value
			(number)))
	(single_line_comment)
	(node
		(identifier)))

================
Multi-line comments
================
/* a comment */
foo /* a comment following a node */

/* a multi-line
 * comment
 */

foo /* inline comment */ bar=true

----------------
(document
	(multi_line_comment)
	(node
		(identifier)
		(multi_line_comment))
	(multi_line_comment)
	(node
		(identifier)
		(multi_line_comment)
		(prop
			(identifier)
			(value
				(boolean)))))
