corpus/strings.txt
================
Simple strings
================
foo "hellO" "bar" baz="123#+.,>|"

----------------
(document
	(node
		(identifier)
		(value
			(string))
		(value
			(string))
		(prop
			(identifier)
			(value
				(string)))))

================
String escapes
================
foo "\t \b \\ \/ / etc" "\u{0192} and \u{Fee0Fe}"

----------------
(document
	(node
		(identifier)
		(value
			(string))
		(value
			(string))))

================
Multi-line string
================
foo "This string
strechtes over multiple
lines" "second string"

----------------
(document
	(node
		(identifier)
		(value
			(string))
		(value
			(string))))
